Bug 480668 - Alternate calendar and holidays can't be selected
Summary: Alternate calendar and holidays can't be selected
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Digital Clock widget (other bugs)
Version First Reported In: 5.93.0
Platform: Other Linux
: NOR major
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6, regression
Depends on:
Blocks:
 
Reported: 2024-02-01 10:07 UTC by Hirad
Modified: 2024-02-03 04:51 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot of digital clock settings (81.48 KB, image/png)
2024-02-01 10:07 UTC, Hirad
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hirad 2024-02-01 10:07:27 UTC
Created attachment 165431 [details]
screenshot of digital clock settings

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. open configure digital clock
2. Enable either or both alternate calendar and Holidays and apply
3. try to select either of them on left list

OBSERVED RESULT
Item becomes highlighted, but the configuration on the left doesn't open

EXPECTED RESULT
Show settings for the selected item

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Arch Linux
(available in About System)
KDE Plasma Version: 5.93.0-1
KDE Frameworks Version: 5.249.0
Qt Version: 6.7.0beta2-1

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2024-02-01 20:42:49 UTC
Can reproduce.
Comment 2 Bug Janitor Service 2024-02-01 21:08:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3848
Comment 3 Nicolas Fella 2024-02-02 01:08:48 UTC
Git commit b7d3a7cce53ad8b3bfd5b3a2a7b4c5194086f844 by Nicolas Fella.
Committed on 01/02/2024 at 22:15.
Pushed by nicolasfella into branch 'master'.

[applets/digitalclock] Fix resolving config UI file

It resolves this based on the plugin name, that used to be the absolute path but is now only the id

Adjust the code accordingly and retrive the value earlier where we still have the file name at hand

M  +5    -7    components/calendar/eventpluginsmanager.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/b7d3a7cce53ad8b3bfd5b3a2a7b4c5194086f844
Comment 4 Nicolas Fella 2024-02-02 01:09:21 UTC
Git commit 28ab381a3347249532fce3645d380a0e5875ac61 by Nicolas Fella.
Committed on 02/02/2024 at 01:09.
Pushed by nicolasfella into branch 'Plasma/6.0'.

[applets/digitalclock] Fix resolving config UI file

It resolves this based on the plugin name, that used to be the absolute path but is now only the id

Adjust the code accordingly and retrive the value earlier where we still have the file name at hand
(cherry picked from commit b7d3a7cce53ad8b3bfd5b3a2a7b4c5194086f844)

M  +5    -7    components/calendar/eventpluginsmanager.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/28ab381a3347249532fce3645d380a0e5875ac61
Comment 5 Bug Janitor Service 2024-02-03 03:18:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3854
Comment 6 Fushan Wen 2024-02-03 04:35:12 UTC
Git commit 3b23cf4bf42a27ff6d73b825cc87ad31b9661a22 by Fushan Wen.
Committed on 03/02/2024 at 04:22.
Pushed by fusionfuture into branch 'master'.

appiumtests/digitalclocktest: test calendar plugin config ui works

The config ui was omitted when porting the calendar plugin. Add a test
to ensure it works in the future.

M  +10   -2    appiumtests/digitalclocktest.py
M  +5    -0    applets/digital-clock/package/contents/ui/configCalendar.qml

https://invent.kde.org/plasma/plasma-workspace/-/commit/3b23cf4bf42a27ff6d73b825cc87ad31b9661a22
Comment 7 Bug Janitor Service 2024-02-03 04:37:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3855
Comment 8 Fushan Wen 2024-02-03 04:51:32 UTC
Git commit df51bec8937b2698fb8b6a8f88b33a093548060b by Fushan Wen.
Committed on 03/02/2024 at 04:37.
Pushed by fusionfuture into branch 'Plasma/6.0'.

appiumtests/digitalclocktest: test calendar plugin config ui works

The config ui was omitted when porting the calendar plugin. Add a test
to ensure it works in the future.


(cherry picked from commit 3b23cf4bf42a27ff6d73b825cc87ad31b9661a22)

M  +10   -2    appiumtests/digitalclocktest.py
M  +5    -0    applets/digital-clock/package/contents/ui/configCalendar.qml

https://invent.kde.org/plasma/plasma-workspace/-/commit/df51bec8937b2698fb8b6a8f88b33a093548060b