[applets/digitalclock] Fix resolving config UI file

It resolves this based on the plugin name, that used to be the absolute path but is now only the id

Adjust the code accordingly and retrive the value earlier where we still have the file name at hand

BUG: 480668